--- a/resources/config/gitflow.yml
+++ b/resources/config/gitflow.yml
@@ -14,7 +14,7 @@ executionEnvironments:
     xlr:
       template:               'GitFlow/GitFlow_Release'
     jenkins:
-      cliPath:                'C:\WB_CLI_230601'
+      cliPath:                'c:\WorkbenchCLI250201'
     ispw:
       libraryQualifier:         'SALESSUP'
       mfProject:
@@ -92,7 +92,7 @@ executionEnvironments:
     xlr:
       template:               'GitFlow/GitFlow_Release'
     jenkins:
-      cliPath:                'C:\WB_CLI_230601'
+      cliPath:                'C:\WB_CLI_250101'
     ispw:
       libraryQualifier:         'SALESSUP'    
       mfProject:
@@ -170,7 +170,7 @@ executionEnvironments:
     xlr:
       template:               'GitFlow/GitFlow_Release'
     jenkins:
-      cliPath:                'C:\WB_CLI_230601' #'C:/TopazCLI201401'
+      cliPath:                'c:\WorkbenchCLI250201' #'C:/TopazCLI201401'
     ispw:
       libraryQualifier:         'SALESSUP'
       mfProject:
